fix: update image for view on mobile

--- a/practice-one/src/stylesheets/app-mobile.scss
+++ b/practice-one/src/stylesheets/app-mobile.scss
@@ -49,8 +49,7 @@
     }
 
     &__img {
-      width: 70%;
-      max-width: 180px;
+      max-width: 160px;
     }
   }
 
@@ -61,8 +60,7 @@
     }
 
     &__img {
-      width: 50%;
-      max-width: 330px;
+      max-width: 240px;
     }
   }
 
